--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/Kir_I4V_random
+script_dir=$base/lib/kir_i4v_random
 [install]
-install_scripts=$base/lib/Kir_I4V_random
+install_scripts=$base/lib/kir_i4v_random
