--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>Kir_I4V_random</name>
+  <name>kir_i4v_random</name>
   <version>0.0.0</version>
   <description>Ez egy bevezető csomag</description>
   <maintainer email="kiralybalintzoltan@gmail.com">he</maintainer>
